# llmbda

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  rebuttal_script.py
.githooks/: pre-push
.github/workflows/: ci.yml
examples/: __main__.py  calendar_booking.py  cli.py  compile_sketch.py  compile_vs_run.py  date_extraction.py  readme.py  showcase.py  step_classes_sketch.py  support_triage.py
examples/crag/: scoring.py  skill.py
examples/gsm8k/: __init__.py  scoring.py  skill.py
examples/triage/: main.py  scoring.py  skill.py
src/tk/llmbda/: __init__.py  _check.py  compose.py  inspect.py  skill.py  utils.py
tests/: conftest.py  test_async.py  test_asyncio_run.py  test_basics.py  test_check.py  test_inspect.py  test_loop.py  test_parallel.py  test_streaming.py  test_utils.py
tests/e2e/: conftest.py  test_recipe.py  test_transcript.py
