[project]
name = "tk-llmbda"
version = "0.1.0"
description = "Skill composition for LLMs — like lambda calculus, but the functions talk back"
requires-python = ">=3.11"
dependencies = []
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=tk.llmbda", "--cov-report=term"]
markers = [
  "e2e: marks tests as end-to-end requiring external APIs (deselect with '-m not e2e')"
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",       # pydocstyle
  "E701",    # same line
  "COM812",  # trailing comma (conflicts with formatter)
  "ISC001",  # single-line implicit string concat
  "T20",     # allow print
  "ANN",     # annotations — we use modern | syntax
  "S101",    # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]
