[project]
name = "tk-llmbda"
dynamic = ["version"]
description = "Skill composition for LLMs — like lambda calculus, but the functions talk back"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.26.0",
]
readme = "README.md"
license = "MIT"
keywords = ["llm", "skill", "composition", "pipeline", "agents"]
authors = [{ name = "Toni Kukurin" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/tkukurin/llmbda"
Issues = "https://github.com/tkukurin/llmbda/issues"
# Changelog = "https://github.com/tkukurin/llmbda/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.11", "ipykernel"]
inspect = ["inspect-ai>=0.3"]
examples = ["simple-parsing>=0.1"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "ipykernel",
    "inspect-ai>=0.3",
    "datasets>=4.8.5",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/tk/llmbda/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=tk.llmbda", "--cov-report=term"]
markers = [
  "e2e: marks tests as end-to-end requiring external APIs (deselect with '-m not e2e')"
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",       # pydocstyle
  "E701",    # same line
  "COM812",  # trailing comma (conflicts with formatter)
  "ISC001",  # single-line implicit string concat
  "T20",     # allow print
  "ANN",     # annotations — we use modern | syntax
  "S101",    # allow assert in tests
  "EM102",
  "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]
"examples/**" = [
  "B018",    # bare expressions are notebook cell outputs
  "E402",    # imports introduced mid-notebook are fine
  "ERA001",  # commented-out code is often an optional snippet
  "FIX002",  # TODOs in examples are dev notes, not tracked work
  "INP001",  # examples/ is not a package
  "PLR2004", # magic numbers are fine in illustrative examples
  "TC001",   # TYPE_CHECKING blocks hurt readability in notebooks
  "TC002",
  "TC003",
  "TD002",   # TODOs in examples don't need author attribution
  "TD003",   # or an issue link
]
